# e-ai_ml2

./: README.md
course/code/code15/anemoi/cbcf/anemoi-core/models/: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  pytest.ini
course/code/code15/anemoi/cbcf/anemoi-core/models/docs/: conf.py  contributing.rst  create-migrations.rst  index.rst
course/code/code15/anemoi/cbcf/anemoi-core/models/docs/cli/: migration.rst
course/code/code15/anemoi/cbcf/anemoi-core/models/docs/introduction/: installing.rst  overview.rst
course/code/code15/anemoi/cbcf/anemoi-core/models/docs/modules/: activations.rst  data_indices.rst  layers.rst  migrations.rst  models.rst  normalization.rst  preprocessing.rst  residual.rst  schemas.rst
course/code/code15/anemoi/cbcf/anemoi-core/models/docs/usage/: create_model.rst
course/code/code15/anemoi/cbcf/anemoi-core/models/src/anemoi_models.egg-info/: PKG-INFO  entry_points.txt  requires.txt
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/data_indices/: test_collection.py  test_data_indices.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/integration/triton/: test_triton_gt.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/layers/: test_activations.py  test_attention.py  test_bounding.py  test_layer_utils.py  test_mlp.py  test_noise_embeddings.py  test_residual.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/layers/block/: test_block_graphconv.py  test_block_graphtransformer.py  test_block_pointwise.py  test_block_transformer.py  test_block_transformermapper.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/layers/mapper/: test_base_mapper.py  test_graphconv_mapper.py  test_graphtransformer_mapper.py  test_transformer_mapper.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/layers/processor/: test_base_processor.py  test_graphconv_processor.py  test_graphtransformer_processor.py  test_pointwise_processor.py  test_transformer_processor.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/migrations/: conftest.py  test_migration_order.py  test_migrations.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/migrations/migrations/: 1750840837_add_foo.py  (+5 more)
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/preprocessing/: test_postprocessor.py  test_preprocessor_imputer.py  test_preprocessor_normalizer.py  test_preprocessor_remapper.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/samplers/: test_diffusion_samplers.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/schemas/: test_data_processors_schemas.py
course/code/code15/anemoi/cbcf/anemoi-core/models/tests/utils/: test_compile.py
(+1499 files in other folders)
